--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "analytics.js-integration-segmentio",
   "description": "The Segmentio analytics.js integration.",
   "author": "Segment <friends@segment.com>",
+  "version": "1.1.0",
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
